--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemon": "^3.1.9"
+    "mongoose": "^8.9.1",
+    "nodemon": "^3.1.9",
+    "zod": "^3.24.1"
   }
 }
