--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "firebase": "^11.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
-    "sweetalert2": "^11.15.0",
+    "sweetalert2": "^11.6.13",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
